# cloudside

./: .coveragerc  .gitignore  .travis.yml  METAR_LICENSE  README.rst  check_cloudside.py  generate_vstasks.py  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
.github/workflows/: black.yml  check-test-coverage.yml  lint_and_test.yml  main.yml  python-package.yml  python-publish.yml  python-runtests-basic.yml  python-runtests-img-comp.yml
cloudside/: __init__.py  asos.py  cli.py  exporters.py  hydra.py  ncdc.py  station.py  storms.py  validate.py  viz.py
cloudside/tests/: __init__.py  exporters_tests.py  helpers.py  stations_tests.py  test_asos.py  test_cli.py  test_exporters.py  test_hydra.py  test_ncdc.py  test_stations.py  test_storms.py  test_validate.py  test_viz.py  validate_tests.py  viz_tests.py
cloudside/tests/data/: sample_NCDC_data.NCD
conda.recipe/dev/: meta.yaml
conda.recipe/stable/: meta.yaml
docs/: Makefile  conf.py  index.rst  make.bat
docs/cloudside/: exporters.rst  ncdc.rst  station.rst  validate.rst  viz.rst
