[metadata]
description-file = readme.rst
license_file = LICENSE

[tool:pytest]
testpaths = cloudside
markers =
    mpl_image_compare
    runslow

flake8-ignore =
    E501
    E131
    E128
    cloudside/tests/test_*.py E241 E131
    check_cloudside.py ALL
    docs/* ALL

flake8-max-line-length = 90
